# local-business-intel-dashboard

./: .env.example  .gitignore  Dockerfile  Makefile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dashboard/: app.py
dbt/: .user.yml  dbt_project.yml  profiles.yml  profiles.yml.example
dbt/models/: sources.yml
dbt/models/marts/: cheapest_shops.sql  market_opportunity.sql  schema.yml  shop_features.sql
dbt/models/staging/: stg_shops.sql
docs/: design.md  gcp-setup-steps.md  tableau-public-live-data.md  tableau.md
scripts/: run_dashboard.sh  run_pipeline.py  run_scheduler.py  train_model.py
sql/analytics/: cheapest_shops.sql  market_opportunity.sql  shop_features.sql
src/: brave_enrich.py  geocode.py  places_client.py  run.py  scoring.py  storage.py  text_analytics.py
src/acji/: __init__.py  config.py  constants.py
src/acji/analytics/: __init__.py  materialize.py
src/acji/clients/: __init__.py  deprecated_paid_client.py  foursquare.py  nominatim.py  overpass.py  yelp.py
src/acji/etl/: __init__.py  deduplicate.py  extract.py  load.py  normalize.py  pipeline.py  score.py
src/acji/model/: __init__.py  train.py
src/acji/quality/: __init__.py  expectations.py
src/acji/utils/: __init__.py  geo.py
tableau/: template.twb
tests/integration/: test_pipeline_smoke.py
tests/unit/: test_deduplicate.py  test_normalize.py  test_score.py
